<resources>
    <string name="app_name">AREA</string>
    <string name="area">AREA</string>
    <string name="info">You need to be connected  first \nto manage your services</string>
    <string name="tree">Tree</string>
    <string name="google">Google</string>
    <string name="microsoft">Microsoft</string>
    <string name="twitter">Twitter</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="logo_google">logo google</string>
    <string name="logo_microsoft">logo microsoft</string>
    <string name="logo_twitter">logo twitter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_register_yet_create_an_account">Not registered yet ? Create an account</string>
    <string name="enter_in_your_world">Enter in your world</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="errorEmail">"Invalid email"</string>
    <string name="errorUsernameRegister">"Username must have a character at least"</string>
    <string name="errorPasswordRegister">"Password must have 7 characters at least"</string>
    <string name="errorPasswordLogin">"Invalid password"</string>
    <string name="errorConfirmPassword">"Passwords are not identical"</string>
    <string name="start_connecting_your_world">Start connecting your world</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="change_password">Change password</string>
    <string name="edit_photo">Edit photo</string>
    <string name="save_changes">Save changes</string>
    <string name="username">Username</string>
    <string name="discord">Discord</string>
    <string name="trello">Trello</string>
    <string name="spotify">Spotify</string>
    <string name="github">Github</string>
    <string name="api">api</string>
    <string name="action">Action</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="reaction">Reaction</string>
    <string name="choose_a_reaction">Choose a reaction</string>
    <string name="save">Save</string>
    <string name="enter_answer">Enter answer</string>
    <string name="param">Param</string>
    <string name="x">x</string>
    <string name="delete">Delete</string>
</resources>