<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AreaActivity">

    <ImageView
        android:id="@+id/backArea"
        android:layout_width="26dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/Action"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/action"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/action_button"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@color/backgroundText"
        android:ems="10"
        android:text="@string/choose_an_action"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Action" />

    <TextView
        android:id="@+id/Reaction"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/reaction"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_button" />

    <Button
        android:id="@+id/reaction_button"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@color/backgroundText"
        android:ems="10"
        android:text="@string/choose_a_reaction"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Reaction" />

    <androidx.cardview.widget.CardView
        android:id="@+id/saveAreaButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/save"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>