<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:elevation="@dimen/card_elevation"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#1AFFFFFF"
        app:cardCornerRadius="@dimen/card_album_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:backgroundTint="#959393">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="190dp"
                android:layout_marginBottom="10dp"
                android:text="@string/x"
                android:textAlignment="center"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/logo_action"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="250dp"
                android:contentDescription="@string/action" />

            <ImageView
                android:id="@+id/logo_reaction"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="250dp"
                android:layout_marginEnd="50dp"
                android:contentDescription="@string/reaction" />

            <TextView
                android:id="@+id/service_reaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="250dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Service_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="250dp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="159dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="155dp"
                android:layout_marginBottom="31dp"
                android:backgroundTint="@color/deleteButton"
                android:text="@string/delete" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
